# maxlux

./: .env.example  .gitignore  ARCHITECTURE_SPEC.md  AUDIT_REPORT.md  CLAUDE.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  PROJECT_STATUS.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  heartbeat.yml  scrape.yml  scraper-evening.yml  scraper-morning.yml
apps/web/: .eslintrc.js  .eslintrc.json  jest.config.js  lint_results.txt  middleware.ts  next.config.mjs  next_log.txt  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json
scraper/: .env.example  pyproject.toml  requirements.txt
scraper/src/: config.py  main.py
scraper/src/clients/: agoda.py  base_client.py  booking.py  hotellux.py  supabase_client.py
scraper/src/data/: mappings.py
scraper/src/pipeline/: hotel_sync_phase.py  orchestrator.py  post_scrape_phase.py  rate_collection_phase.py
scraper/src/services/: alert_checker.py  cdc.py  exchange_rate_sync.py  hotel_sync.py  ota_collector.py  rate_collector.py  rate_parser.py  stats_aggregator.py  tagger.py
scraper/src/utils/: holidays.py  logger.py
scraper/tests/: README.md  test_tagger.py
scraper/tests/fixtures/: sample_rates_response.json  sample_search_response.json
scripts/: check-i18n-keys.js
supabase/migrations/: 001_create_hotels.sql  002_create_daily_rates.sql  003_create_ota_sources.sql  004_create_ota_prices.sql  005_create_price_changes.sql  006_create_holidays.sql  007_create_monthly_stats.sql  008_create_scrape_logs.sql  (+12 more)
(+107 files in other folders)
